[gd_scene load_steps=16 format=2]

[ext_resource path="res://script/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://script/PieceController.gd" type="Script" id=2]
[ext_resource path="res://assets/player/Player.tres" type="SpriteFrames" id=3]
[ext_resource path="res://script/PlayerPowerupManager.gd" type="Script" id=4]
[ext_resource path="res://assets/background2.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/jump.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/rubberband.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/death.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/gravity.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/walk.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/ui/m04fatal_fury/m04.TTF" type="DynamicFontData" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=3]
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 728, 512 )
script = ExtResource( 1 )
gravity_acceleration = 80
lateral_speed = 350.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground"]
position = Vector2( 728, 408 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -64 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="PieceController" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PieceCenter" type="Node2D" parent="PieceController"]
position = Vector2( 0, -32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
frames = ExtResource( 3 )
animation = "idle"
frame = 1
playing = true

[node name="PieceHolder" type="Node2D" parent="."]

[node name="SFX" type="Node2D" parent="."]

[node name="Click" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 7 )

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 6 )
volume_db = -9.649

[node name="Death" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 9 )

[node name="Gravity" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 10 )

[node name="Walking" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 11 )

[node name="Slingshot" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 8 )

[node name="RightCollider" type="CollisionShape2D" parent="."]
position = Vector2( 32, -32 )
shape = SubResource( 2 )
disabled = true

[node name="LeftCollider" type="CollisionShape2D" parent="."]
position = Vector2( -32, -32 )
shape = SubResource( 2 )
disabled = true

[node name="UpCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -64 )
shape = SubResource( 2 )
disabled = true

[node name="PowerUpManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="WinLabel" type="Label" parent="."]
visible = false
margin_left = -144.0
margin_top = -136.0
margin_right = 136.0
margin_bottom = -63.0
custom_fonts/font = SubResource( 3 )
text = "Click!

Press space to go to the next level"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="piece_attached" from="PieceController" to="PowerUpManager" method="on_piece_attached"]
[connection signal="piece_de_attached" from="PieceController" to="PowerUpManager" method="on_piece_de_attached"]
